@@ -42,6 +42,8 @@ documenting the various pieces. </p>
 good place to start. She has some useful information on her
 <a href="http://members.aol.com/lauram3017/index.html">homepage</a> as
 well.</li>
+<li> <a href="faq.shtml">Alternative, more up-to-date FAQ</a> (not completed)
+</li>
 </ul>
 
 <h2 align="left">GNU Development Tools Documentation</h2>
