@@ -24,11 +24,12 @@
 
 <tr><td colspan="2"><a href="licensing.shtml">Licensing Terms</a></td></tr>
 
-<tr><td colspan="2"><a href="who.shtml">Who are we?</a></td></tr>
+<!-- <tr><td colspan="2"><a href="who.shtml">Who are we?</a></td></tr> -->
+<tr><td colspan="2"><a href="http://sourceforge.net/project/memberlist.php?group_id=2435">Who are we?</a></td></tr>
 
 <tr><td colspan="2"><a href="news.shtml">News</a></td></tr>
 
 <tr><td colspan="2"><a href="history.shtml">Project History</a></td></tr>
 
 </table>
-<!-- $Id: lsidebar.html,v 1.2 2000-12-18 19:44:50 earnie Exp $ -->
+<!-- $Id: lsidebar.html,v 1.3 2000-12-22 20:48:40 pfalcon Exp $ -->
